--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "@slack/bolt": "^3.19.0",
     "dotenv": "^16.4.5"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
